	* testsuite/gm2/switches/check-all/plugin/fail/gm2.exp:
	  (TORTURE_OPTIONS) use global version.
	* testsuite/gm2/switches/check-all/run/fail/gm2.exp:  add
	  -fno-m2-plugin to stop detection of errors at compile time.
	* testsuite/lib/gm2-torture.exp:  added debugging messages
	  and also appended additional_flags to options.
	* testsuite/lib/gm2.exp:  added debugging messages.

2019-08-14      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  (check-gm2) removed, use inbuilt
          version.  (lang_checks) include check-gm2.
	* testsuite/gm2/calling-c/datatypes/unbounded/run/pass/gm2.exp:
          use rootme and rootme/gm2 rather than tmpdir.
	* testsuite/gm2/examples/callingC/run/pass/gm2.exp:
          use rootme and rootme/gm2 rather than tmpdir.
	* testsuite/gm2/exceptions/run/pass/gm2.exp:
          use rootme and rootme/gm2 rather than tmpdir.
	* testsuite/gm2/extensions/run/pass/gm2.exp:
          use rootme and rootme/gm2 rather than tmpdir.
	* testsuite/gm2/imports/run/pass/gm2.exp:
          use rootme and rootme/gm2 rather than tmpdir.
	* testsuite/gm2/linking/libarchive/pass/gm2.exp:
          use rootme and rootme/gm2 rather than tmpdir.
	* testsuite/gm2/pim/run/pass/gm2.exp:
          use rootme and rootme/gm2 rather than tmpdir.
	* testsuite/gm2/types/run/pass/gm2.exp:
          use rootme and rootme/gm2 rather than tmpdir.
	* testsuite/lib/gm2.exp:
          use rootme and rootme/gm2 rather than tmpdir.

2019-08-13      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/m2-link-support.h:  (GM2CC) added %d to the
	  temporary assembly file.

2019-08-04      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-libs-iso/SYSTEM.mod:  (RotateVal)
          added extra comment.  RotateCount is truncated to
	  modulus set size.
	* gm2/gm2-libs/SYSTEM.mod:  (RotateVal)
          added extra comment.  RotateCount is truncated to
	  modulus set size.

2019-08-02      Gaius Mulley <gaius.mulley@southwales.ac.uk>
